fix: resolve Vercel deployment - update Next.js and fix vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,12 @@
         {
             "source": "/routinepath",
             "destination": "https://routinepath.darpanneve.com",
-            "permanent": true,
-            "statusCode": 301
+            "permanent": true
         },
         {
             "source": "/routinepath/:path*",
             "destination": "https://routinepath.darpanneve.com/:path*",
-            "permanent": true,
-            "statusCode": 301
+            "permanent": true
         }
     ],
     "headers": [
